--- a/css/styles.css
+++ b/css/styles.css
@@ -597,3 +597,93 @@ address {
   fill: #fff;
 }
 /* footer section end */
+
+/* overlay - pop-up */
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.7);
+  top: 0;
+  left: 0;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pop-up {
+  border-radius: 4px;
+  width: 408px;
+  height: 584px;
+  background-color: #fcfcfc;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  position: relative;
+}
+
+.pop-up-title {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-top: 72px;
+  margin-bottom: 16px;
+}
+
+.pop-up-close-btn {
+  width: 5%;
+  align-self: flex-end;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  position: absolute;
+  top: 24px;
+}
+
+.pop-up-field {
+  margin-bottom: 8px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.pop-up-field label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 8px;
+}
+
+.pop-up-field:last-of-type {
+  margin-bottom: 24px;
+  flex-direction: row;
+  gap: 3px;
+}
+
+.pop-up-privacy {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.pop-up-privacy .blue-text {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.pop-up-field-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+}
