--- a/css/styles.css
+++ b/css/styles.css
@@ -560,42 +560,48 @@ address {
   fill: #f4f4fd;
 }
 
-.footer-form {
-  width: 453px;
-  height: 80px;
-  color: #fff;
+/* footer-subsribe */
+
+.form {
+  display: flex;
+  gap: 24px;
 }
 
 .form-input {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  color: #fff;
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
-  background-color: #2e2f42;
-}
-
-.input::placeholder {
-  font-weight: 400;
+  background-color: transparent;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  color: #ffffff;
+  padding-left: 16px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
-.form-label {
-  display: flex;
-  flex-direction: column;
+
+.form-input::placeholder {
+  color: #ffffff;
 }
 
 .form-button {
-  background-color: #4d5ae5;
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  margin: 0px;
 }
+
 .form-icons {
-  fill: #fff;
+  fill: #ffffff;
+  margin-left: 16px;
 }
+
+.footer-form {
+  margin-left: 80px;
+}
+
 /* footer section end */
 
 /* overlay - pop-up */
@@ -659,6 +665,7 @@ address {
   display: flex;
   flex-direction: column;
   position: relative;
+  padding: 0;
 }
 
 .pop-up-field-icon {
