--- a/css/styles.css
+++ b/css/styles.css
@@ -610,7 +610,6 @@ address {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(46, 47, 66, 0.7);
   top: 0;
   left: 0;
   z-index: 999;
@@ -618,22 +617,28 @@ address {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pop-up {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 4px;
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   display: flex;
   flex-direction: column;
-  padding: 0 24px;
-  position: relative;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  padding: 72px 24px 24px 24px;
+  position: absolute;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.pop-up-title {
+/* .pop-up-title {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -641,7 +646,7 @@ address {
   color: #2e2f42;
   margin-top: 72px;
   margin-bottom: 16px;
-}
+} */
 
 .pop-up-close-btn {
   width: 24px;
@@ -652,36 +657,131 @@ address {
   position: absolute;
   top: 24px;
   right: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.pop-up-close-icon {
+.form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.form-input {
+  position: relative;
+}
+
+.form-input-line {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input-line:focus {
+  border-color: #4d5ae5;
+}
+
+.form-input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input-line:focus ~ .form-input-icon {
+  fill: #4d5ae5;
+}
+
+.form-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.pop-up-check {
+  margin-bottom: 24px;
+}
+
+.check-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.check-form {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.check-input:checked ~ .check-form {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.check-form-link {
+  color: #4d5ae5;
+  text-decoration: underline;
+}
+
+/* .pop-up-close-icon {
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pop-up-field {
   margin-bottom: 8px;
-  border: none;
+  /* border: none;
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 0;
-}
+  padding: 0; */
 
+/* 
 .pop-up-field-icon {
   position: absolute;
   top: 23px;
   left: 13px;
 }
 
-.pop-up-field label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16667;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  margin-bottom: 8px;
-}
 
 .pop-up-field:last-of-type {
   margin-bottom: 24px;
@@ -748,5 +848,12 @@ address {
 .pop-up-close-btn:hover,
 .pop-up-close-icon:hover {
   background-color: #404bbf;
-  fill: #fff;
+  border: none;
+  fill: #ffffff;
 }
+
+.pop-up-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+} */
