--- a/css/styles.css
+++ b/css/styles.css
@@ -779,12 +779,34 @@ address {
   text-decoration: underline;
 }
 
-.visually-hidden {
+.check-input:checked .check-label {
+    /* background-image: url("../images/icons.svg#icon-click");
+    background-repeat: no-repeat;
+    background-position: center; */
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+}
+
+
+
+/* .visually-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+} */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
-
 
 /* 
 .pop-up-field-icon {
